--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>MeNew</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script type="module" src="/src/main.ts"></script> -->
     
+	<script type="importmap">
+		{
+			"imports": {
+				"three": "https://unpkg.com/three@0.158.0/build/three.module.js",
+				"three/addons/": "https://unpkg.com/three@0.158.0/examples/jsm/"
+			}
+		}
+	</script>
 		<script type="module">
 
 			import * as THREE from 'three';
@@ -27,7 +33,7 @@
 			function init() {
 
 				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 20 );
-				camera.position.z = 2.5;
+				camera.position.z = -5;
 
 				// scene
 
